--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -76,8 +76,10 @@
 					<td th:if="*{stringBirthDate.equals('9999年1月1日')}">不明</td>
 					<td th:unless="*{stringBirthDate.equals('9999年1月1日')}"
 						th:text="*{stringBirthDate}"></td>
-					<td th:text="*{zooName}"></td>
-
+					<td>
+					<a th:href="@{/zoo/detail/{zoo_id}(zoo_id=*{zoo})}" th:text="*{zooName}">
+					</a>
+					</td>
 					<td th:if="*{#strings.isEmpty(mother)}">不明</td>
 					<td th:unless="*{#strings.isEmpty(mother)}" th:text="*{mother}"></td>
 
