--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -73,15 +73,23 @@
 					<td th:if="*{stringBirthDate.equals('9999年1月1日')}">不明</td>
 					<td th:unless="*{stringBirthDate.equals('9999年1月1日')}"
 						th:text="*{stringBirthDate}"></td>
-					<td>
+					<td th:if="*{animalZooHistoryList[0].zoo.zoo_id} == 0" 
+						th:text="*{animalZooHistoryList[0].zoo.zoo_name}">
+					<td th:unless="*{animalZooHistoryList[0].zoo.zoo_id} == 0" >
 					<a th:href="@{/zoo/detail/{zoo_id}(zoo_id=*{animalZooHistoryList[0].zoo.zoo_id})}" th:text="*{animalZooHistoryList[0].zoo.zoo_name}">
 					</a>
 					</td>
-					<td th:if="*{#strings.isEmpty(mother)}">不明</td>
-					<td th:unless="*{#strings.isEmpty(mother)}" th:text="*{mother}"></td>
+					<td th:if="*{#strings.isEmpty(motherAnimal.name)}">不明</td>
+					<td th:unless="*{#strings.isEmpty(motherAnimal.name)}">
+					<a th:href="@{/detail/{animal_id}(animal_id=*{motherAnimal.animal_id})}" th:text="*{motherAnimal.name}">
+					</a>
+					</td>
 
-					<td th:if="*{#strings.isEmpty(father)}">不明</td>
-					<td th:unless="*{#strings.isEmpty(father)}" th:text="*{father}"></td>
+					<td th:if="*{#strings.isEmpty(fatherAnimal.name)}">不明</td>
+					<td th:unless="*{#strings.isEmpty(fatherAnimal.name)}">
+					<a th:href="@{/detail/{animal_id}(animal_id=*{fatherAnimal.animal_id})}" th:text="*{fatherAnimal.name}">
+					</a>
+					</td>
 
 					<td><a class="btn btn-sm btn-info"
 						th:href="@{/detail/{animal_id}(animal_id=*{animal_id})}">詳細情報</a></td>
