--- a/src/main/resources/static/css/searchResult.css
+++ b/src/main/resources/static/css/searchResult.css
@@ -135,7 +135,7 @@ h2{
 	font-size: 16px;
     font-style: normal;
     color:  #B9B9B9;
-    text-decoration:none;
+   /*  text-decoration:none; */
 }
 
 @media only screen and (max-width: 799px){
